Update UI and recipes

--- a/src/client/index.css
+++ b/src/client/index.css
@@ -1,91 +1,7 @@
-html, body {
-    height: 100vh;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 body {
-    margin: 0;
-    font-family: "Inter", sans-serif;
-}
-
-a {
-    text-decoration: none;
-}
-
-#root {
-    height: 100vh;
-}
-
-.header {
-    display: flex;
-    padding: 20px;
-    justify-content: space-between;
-    background-color: cornflowerblue;
-}
-
-.header a {
-    color: #fff;
-    font-size: 1rem;
-}
-
-/* add margin right but not to the last link */
-.links a:not(:last-child) {
-    margin-right: 10px;
-}
-
-/* Signup Form */
-.signup-container {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.signup-container form {
-    display: flex;
-    flex-direction: column;
-}
-
-.signup-container form section {
-    display: flex;
-    flex-direction: column;
-}
-
-form input {
-    font-size: 1.2rem;
-    line-height: 2rem;
-    border-radius: 8px;
-    padding: 8px 10px;
-    margin: 10px;
-}
-
-form input.error {
-    outline-color: red;
-    border-color: red;
-}
-
-form input:focus {
-    outline-color: blueviolet;
-}
-
-form button {
-    background-color: cornflowerblue;
-    color: #fff;
-    font-size: 1.5rem;
-    font-weight: 700;
-    padding: 15px;
-    border-radius: 10px;
-}
-
-form button:disabled {
-    background-color: #6dc4dc;
-}
-
-.error {
-    display: none;
-    color: red;
-}
-
-.error.show {
-    display: block;
+    font-family: "Inter Variable", sans-serif;
 }
